# svgl

./: .cvsignore  .gitmodules  README  README.md  aclocal.m4  svgl.pc.in
apps/: Makefile.am  Makefile.in
apps/glutSVGViewer/: Makefile.in  glutSVGViewer.cpp
apps/svg2raster/: Makefile.am  Makefile.in  svg2raster.cpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  docs  libsvgl-dev.install  rules
demos/: Makefile.in  autoscale.cpp  simple.cpp
demos/tutorial/: 00-simplest.cpp  01-loading.cpp  02-zoomAndPan.cpp  03-picking.cpp  04-useExternal.cpp  05-text.cpp  06-animation.cpp  GlutTimeManager.cpp  GlutTimeManager.hpp  Makefile.in
docs/: INSTALL  NOTES  TODO  index.html  plan  svgldoc.css
glft/: FontManager.cpp  FontManager.hpp  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  debug.hpp  glft.cpp  glft.hpp
glft/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
glft/demos/: Makefile.am  Makefile.in
glft/glft/: FontInfo.hpp  FontManager.cpp  FontManager.hpp  Makefile.in  config.hpp.in~  debug.hpp  glft.cpp
glft/sysdep/macosx/: config.H
samples/: makeGrid.pl  starfield.cpp
scripts/: GenFile.py  Makefile.am  Makefile.in  NonRegression.py  config.macosx.py  config.py.in  cplusplus.py  cppHeader.py  cppName.py  enum_map.py  genAttributeParser.py  genFromIdl.py  genSvgElement.py  idl.py  interfaces.py  makeAnimated.py  makeBasicTypes.py  makeColors.py  makeList.py  makeParseAttribute.py  make_cpp_string_name.py  mapAttributeType.py  mapDtdIdl.py  parse_attr.py  parse_dtd.py  parse_idl.py  parse_idl2.py  pythonv.py  test_suite.py  updateSvglContext.py
share/: colors.txt  sdom_external_entities  svg.dtd  svg.idl
src/: Makefile.in
src/agg/: Makefile.am  Makefile.in  agg_array.h  agg_basics.h  agg_conv_curve.h  agg_conv_dash.h  agg_conv_generator.h  agg_conv_stroke.h  agg_curves.cpp  agg_curves.h  agg_ellipse.h  agg_gen_dash.cpp  agg_gen_dash.h  agg_gen_stroke.cpp  agg_gen_stroke.h  agg_math.h  agg_path_storage.cpp  agg_path_storage.h  agg_shorten_path.h  agg_vertex_iterator.h  agg_vertex_sequence.h
src/svgl/: AnimateAdapter.hpp  AnimateAdapterColor.hpp  AnimateAdapterDouble.hpp  AnimationInfo.hpp  AnimationManager.cpp  AnimationManager.hpp  BezierPathDistanceIterator.cpp  BezierPathDistanceIterator.hpp  BezierPathGlDisplay.cpp  BezierPathLength.cpp  BezierPathLength.hpp  BoundingBoxManager.cpp  BoundingBoxManager.hpp  Context.hpp  DisplayManager.cpp  DisplayManager.hpp  ExternalEntityManager.cpp  ExternalEntityManager.hpp  FakeTimeManager.cpp  FakeTimeManager.hpp  FilterContext.hpp  GLInfo.cpp  GLInfo.hpp  GradientInfo.cpp  GradientInfo.hpp  ImageManager.cpp  ImageManager.hpp  InitHelper.cpp  InitHelper.hpp  KeyFrame.hpp  Makefile.am  Makefile.in  MultiPassManager.cpp  MultiPassManager.hpp  Parser.cpp  Parser.hpp  PickManager.cpp  PickManager.hpp  SimpleShapeTraversal.hpp  StopElements.hpp  (+37 more)
src/utils/: EntityResolver.cpp  EntityResolver.hpp  FileInputSource.cpp  FileInputSource.hpp  InputSource.hpp  IstreamInputSource.cpp  IstreamInputSource.hpp  List.hpp  Makefile.am  Makefile.in  StdioInputSource.cpp  StdioInputSource.hpp  String.cpp  String.hpp  StringBuffer.cpp  StringBuffer.hpp  StringImpl.cpp  StringImpl.hpp  StringInputSource.cpp  StringInputSource.hpp  StringList.hpp  StringUtils.cpp  StringUtils.hpp  gc_alloc.hpp
src/w3c/: Makefile.in
src/w3c/css/: CSSRGBColor.cpp  CSSRule.hpp  CSSStyle.cpp  CSSStyleDeclaration.hpp  CSSURI.cpp  CSSURI.hpp  CSSValue.hpp  CurrentColor.hpp  DocumentCSS.hpp  FontStyle.hpp  Makefile.in  RGBColor.hpp  TextAnchor.hpp  URIColor.hpp  ViewCSS.hpp  inherited_style_defs.hpp  not_inherited_style_defs.hpp  style_defs.hpp
src/w3c/dom/: Attr.cpp  Attr.hpp  AttrDef.cpp  AttrDef.hpp  CDATASection.cpp  CDATASection.hpp  CharacterData.cpp  CharacterData.hpp  ChildNode.cpp  ChildNode.hpp  Comment.cpp  Comment.hpp  DOMException.cpp  DOMException.hpp  DOMImplementation.cpp  DOMImplementation.hpp  Document.cpp  Document.hpp  DocumentFragment.cpp  DocumentFragment.hpp  DocumentType.cpp  DocumentType.hpp  Element.cpp  Element.hpp  Entity.cpp  Entity.hpp  EntityReference.cpp  EntityReference.hpp  Makefile.am  Makefile.in  NODES  NamedNodeMap.hpp  Node.cpp  Node.hpp  NodeList.hpp  Notation.cpp  Notation.hpp  ParentNode.cpp  ParentNode.hpp  ProcessingInstruction.cpp  (+6 more)
src/w3c/dom/ext/: DOMParser.cpp  DOMParser.hpp  DOMVisitor.cpp  DOMVisitor.hpp  DOMWriter.cpp  DOMWriter.hpp  ErrorHandler.hpp  Makefile.in
src/w3c/dom/impl/: AttributeMap.cpp  AttributeMap.hpp  Makefile.in  NamedNodeMapImpl.cpp  NamedNodeMapImpl.hpp  NodeListImpl.cpp  NodeListImpl.hpp
src/w3c/events/: DocumentEvent.hpp  Event.hpp  EventTarget.hpp  Makefile.am  Makefile.in  UIEvent.hpp
src/w3c/smil/: ElementTimeControl.hpp  Makefile.am  Makefile.in
src/w3c/svg/: Animated.hpp  Attribute.hpp  DOMString.hpp  Document.hpp  Element.hpp  Integer.hpp  Makefile.in  NodeList.hpp  SVGAltGlyphElement.cpp  SVGAnimateColorElement.cpp  SVGAnimateElement.cpp  SVGAnimateMotionElement.cpp  SVGAnimateTransformElement.cpp  SVGAnimationElement.cpp  SVGCircleElement.cpp  SVGClipPathElement.cpp  SVGDefsElement.cpp  SVGDescElement.cpp  SVGDocument.cpp  SVGElement.cpp  SVGEllipseElement.cpp  SVGFEBlendElement.cpp  SVGFEColorMatrixElement.cpp  SVGFECompositeElement.cpp  SVGFEFloodElement.cpp  SVGFEGaussianBlurElement.cpp  SVGFEMergeElement.cpp  SVGFEMergeNodeElement.cpp  SVGFEOffsetElement.cpp  SVGFESpecularLightingElement.cpp  SVGFilterElement.cpp  SVGFilterPrimitiveStandardAttributes.cpp  SVGGElement.cpp  SVGGradientElement.cpp  SVGImageElement.cpp  SVGLength.cpp  SVGLineElement.cpp  SVGLinearGradientElement.cpp  SVGList.hpp  SVGLocatable.cpp  (+29 more)
tests/: Makefile.am  Makefile.in  gllist.cpp  panAndZoom.cpp  panAndZoom.hpp  test_clipping.cpp
