.SILENT: @DISABLE_SILENT@

noinst_LTLIBRARIES = libsvgltest.la

libsvgltest_la_SOURCES = gllist.cpp test_clipping.cpp panAndZoom.cpp panAndZoom.hpp

AM_CPPFLAGS = -I$(top_builddir)/local/include -I$(top_builddir)/gen/ -I$(top_builddir)/src/w3c/ -I$(top_builddir)/src/ -I$(top_builddir)/src/utils -I$(top_builddir)/src/agg  -I$(top_builddir)/src/gen
