.SILENT: @DISABLE_SILENT@

noinst_LTLIBRARIES = libsrcsvgl.la
libsrcsvgl_la_SOURCES = \
	AnimationManager.cpp\
	BezierPathDistanceIterator.cpp\
	BezierPathGlDisplay.cpp\
	BezierPathLength.cpp\
	BoundingBoxManager.cpp\
	DisplayManager.cpp\
	ExternalEntityManager.cpp\
	FakeTimeManager.cpp\
	GLInfo.cpp\
	GradientInfo.cpp\
	ImageManager.cpp\
	InitHelper.cpp\
	MultiPassManager.cpp\
	Parser.cpp\
	PickManager.cpp\
	TextureSnapshot.cpp\
	TimeManager.cpp\
	bezierpath.cpp\
	colors.cpp\
	gluEllipse.cpp\
	gluShadedDisk.cpp\
	parseHelper.cpp\
	parsePathSegList.cpp\
	parsePoints.cpp\
	parseTransform.cpp\
	screenshot.cpp\
	strings.cpp\
	glPoly.cc\
	agg2glPoly.cc

AM_CPPFLAGS = -I$(top_builddir)/src/

pkgincludedir = @SVGL_INCLUDEDIR@/svgl

pkginclude_HEADERS = \
	AnimateAdapter.hpp\
	AnimateAdapterColor.hpp\
	AnimateAdapterDouble.hpp\
	AnimationInfo.hpp\
	AnimationManager.hpp\
	BezierPathDistanceIterator.hpp\
	BezierPathLength.hpp\
	BoundingBoxManager.hpp\
	Context.hpp\
	DisplayManager.hpp\
	ExternalEntityManager.hpp\
	FakeTimeManager.hpp\
	FilterContext.hpp\
	GLInfo.hpp\
	GradientInfo.hpp\
	ImageManager.hpp\
	InitHelper.hpp\
	KeyFrame.hpp\
	MultiPassManager.hpp\
	Parser.hpp\
	PickManager.hpp\
	SimpleShapeTraversal.hpp\
	StopElements.hpp\
	TextInfo.hpp\
	TextureSnapshot.hpp\
	TimeManager.hpp\
	agg2glPoly.h\
	bezier.hpp\
	bezierpath.hpp\
	config.hpp\
	config.macosx.hpp\
	debug.hpp\
	getNextSVGElement.hpp\
	getattr.hpp\
	glPoly.h\
	gluEllipse.hpp\
	gluShadedDisk.hpp\
	parseHelper.hpp\
	parseTransform.hpp\
	point.hpp\
	point2d.hpp\
	printHelper.hpp\
	screenshot.hpp\
	shape_type.h\
	timeval_helpers.hpp\
	xmlostream.hpp


